--- a/Identity.Web/Views/Home/Index.cshtml
+++ b/Identity.Web/Views/Home/Index.cshtml
@@ -2,30 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<body style="background-image: url(Content/Netflix2.jpg)">
+<body style="background-color:#b9090b;">
     <div class="jumbotron" style="background-color:transparent;">
 
 
 
     </div>
 
-    <div class="row">
-        <div class="col-md-3">
-            <br />
-            <br />
-            <br />
-            <p>
-             <button class="botonmain">
-                 @Html.ActionLink("SignUp for free", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
-             </button>
-            </p>
-        </div>
-        <div class="col-md-3">
-
-        </div>
-
         <div class="col-md-6">
-            <h2 class="titles">WATCH TV SHOWS & MOVIES. <br> ANYTIME, ANYWHERE.</h2>
+            <h2 class="titles">PAGINA PRINCIPAL AQUI SE DESPLIEGARAN LOS REVIEWS!!!!!</h2>
 
         </div>
     </div>
