--- a/Identity.Web/Views/Landing/Landing.cshtml
+++ b/Identity.Web/Views/Landing/Landing.cshtml
@@ -3,10 +3,11 @@
     ViewBag.Title = "Landing";
 }
 
-<body style="background-image: url(Content/Netflix2.jpg);" >
+<body class="img-bg">
     
-        <div class="jumbotron" style="background-color:transparent;">
 
+
+        <div class="jumbotron" style="background-color:transparent;">
 
 
         </div>
@@ -31,5 +32,6 @@
 
             </div>
         </div>
-   
+    
+
 </body>
