--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -1,31 +1,43 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model flix.Models.Categorias
+
+@{
+    ViewBag.Title = "Index";
+    List<SelectListItem> list = new List<SelectListItem>();
+    for (int i = 1; i < 10; i++)
+    {
+        SelectListItem one = new SelectListItem() { Text = "Categoria: ", Value = 1.ToString() };
+        list.Add(one);
+    }
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<body style="background-color:rgb(7, 92, 111);">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+    <div class="row" style="margin-top: 0px; background-color:#222; height:100px;">
+
+        <div class="col-sm-4" style="margin-top:30px;">
+            <div class="input-group">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Search!</button>
+                </span>
+                @Html.TextBox("SearchString", null, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="col-sm-4" style="margin-top:30px;">
+
+            @Html.DropDownListFor(c => c.categoria, list, "Selecciona", new { @class = "form-control" });
+        </div>
+        <div class="col-sm-4">
+            boton
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+
+
+    <div class="col-md-6">
+        <h2 class="titles">PAGINA PRINCIPAL AQUI SE DESPLIEGARAN LOS REVIEWS!!!!!</h2>
+
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
-</div>
+</body>
