--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -1,15 +1,9 @@
-﻿@model flix.Models.Categorias
+﻿@model flix.Models.IndexViewModel
 
 @{
     ViewBag.Title = "Index";
-    List<SelectListItem> list = new List<SelectListItem>();
-    for (int i = 1; i < 10; i++)
-    {
-        SelectListItem one = new SelectListItem() { Text = "Categoria: ", Value = 1.ToString() };
-        list.Add(one);
-    }
-}
 
+}
 <body style="background-color:rgb(7, 92, 111);">
 
 
@@ -26,7 +20,7 @@
 
         <div class="col-sm-4" style="margin-top:30px;">
 
-            @Html.DropDownListFor(c => c.categoria, list, "Selecciona", new { @class = "form-control" });
+            @Html.DropDownListFor(c => c.Genre.Name,new SelectList(Model.LGenres,"Id","Name") , "Selecciona", new { @class = "form-control" });
         </div>
         <div class="col-sm-4">
             boton
@@ -37,7 +31,6 @@
 
     <div class="col-md-6">
         <h2 class="titles">PAGINA PRINCIPAL AQUI SE DESPLIEGARAN LOS REVIEWS!!!!!</h2>
-
     </div>
-    </div>
+  
 </body>
