--- a/flix/Views/Shared/_Layout.cshtml
+++ b/flix/Views/Shared/_Layout.cshtml
@@ -88,15 +88,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-<<<<<<< HEAD
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Graficas - test", "Graficas", "Graficas")</li>
-=======
+                   
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Register", "UserRegister", "User")</li>
->>>>>>> Cambios de vistas |Index| Reviews | Perfil
+                    @*<li>@Html.ActionLink("Register", "UserRegister", "User")</li>*@
                 </ul>
             </div>
         </div>
