--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -2,20 +2,9 @@
 
 @{
     ViewBag.Title = "Index";
-<<<<<<< HEAD
 
 }
-<body style="background-color:rgb(7, 92, 111);">
-=======
-    List<SelectListItem> list = new List<SelectListItem>();
-    for (int i = 1; i < 10; i++)
-    {
-        SelectListItem one = new SelectListItem() { Text = "Categoria: ", Value = 1.ToString() };
-        list.Add(one);
-    }
 
-
-}
 
 
 <body class="parallax">
@@ -28,7 +17,6 @@
         </div>
 
     </div>
->>>>>>> Cambios de vistas |Index| Reviews | Perfil
 
 
     <div class="row" style="margin-top: 0px;  height:100px; background-color:#b73333;    padding-right: 15px;
@@ -47,25 +35,22 @@
 
         <div class="col-sm-4" style="margin-top:30px;">
 
-<<<<<<< HEAD
+
             @Html.DropDownListFor(c => c.Genre.Name,new SelectList(Model.LGenres,"Id","Name") , "Selecciona", new { @class = "form-control" });
-=======
-            @Html.DropDownListFor(c => c.categoria, list, "Selecciona Categoria", new { @class = "form-control" })
->>>>>>> Cambios de vistas |Index| Reviews | Perfil
+
+       
+
         </div>
         <div class="col-sm-4" style="margin-top:30px;">
 
-            @Html.DropDownListFor(c => c.categoria, list, "Selecciona Autor", new { @class = "form-control" })
+            @*@Html.DropDownListFor(c => c.categoria, list, "Selecciona Autor", new { @class = "form-control" })*@
         </div>
     </div>
 
 
 
-<<<<<<< HEAD
-    <div class="col-md-6">
-        <h2 class="titles">PAGINA PRINCIPAL AQUI SE DESPLIEGARAN LOS REVIEWS!!!!!</h2>
-=======
 
+    
     <div class="body-content" style="background-color:white;padding-top: 20px;margin-left: 20px;margin-right: 20px;">
 
 
@@ -141,8 +126,5 @@
             </section>
 
         </div>
-
->>>>>>> Cambios de vistas |Index| Reviews | Perfil
     </div>
-  
 </body>
