--- a/flix/Views/Review/review.cshtml
+++ b/flix/Views/Review/review.cshtml
@@ -17,22 +17,33 @@
 
 
 
+        
+
+
+
+
+
         <div class="panel panel-default" style="background-color:#b73333;">
             <div class="panel-body">
                 <h2 style="color:white;font-size:35px;text-align:center;" class="titles">Reviews</h2>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-4">
-                HOL
-            </div>
+        <div class="panel panel-default" style="background-color:white;">
+            <div class="panel-body">
+                <div class="container" style="margin-left:100px;">
+                    <div class="row">
+                        <div style="height:400px;" class="col-md-3">
+                            <a><img style="width: 265px;height: 391px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div style="height:400px;border-style:solid;border-color:black; border-width:1px;" class="col-md-7">
 
-            <div class="col-md-4">
-                HOL
-            </div>
+                        </div>
+                    </div>
 
+                </div>
+
+            </div>
         </div>
-     
-    </div>
+       
 </body>
