--- a/flix/Views/Home/Index.cshtml
+++ b/flix/Views/Home/Index.cshtml
@@ -19,32 +19,15 @@
     </div>
 
 
-    <div class="row" style="margin-top: 0px;  height:100px; background-color:#b73333;    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;">
-
+    <div class="row" style="margin-top: 0px;  height:100px; background-color:#b73333;   padding-left: 15px;margin-right: auto;margin-left: auto;">
         <div class="col-sm-4" style="margin-top:30px;">
-            <div class="input-group">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Search!</button>
-                </span>
-                @Html.TextBox("SearchString", null, new { @class = "form-control" })
-            </div>
-        </div>
-
-        <div class="col-sm-4" style="margin-top:30px;">
-
-
-            @Html.DropDownListFor(c => c.Genre.Name,new SelectList(Model.LGenres,"Id","Name") , "Selecciona", new { @class = "form-control" });
-
-       
-
+            @Html.DropDownListFor(c => c.Genre.Name,new SelectList(Model.LGenres,"Id","Name") , "Selecciona", new { @class = "form-control" })
         </div>
         <div class="col-sm-4" style="margin-top:30px;">
 
             @*@Html.DropDownListFor(c => c.categoria, list, "Selecciona Autor", new { @class = "form-control" })*@
         </div>
+
     </div>
 
 
@@ -63,7 +46,7 @@
 
        
               
-                <div class="panel panel-default" style="background-color:white;">
+                <div class="panel panel-default" style="background-color:white; box-shadow: 7px 7px 5px #888888;">
                     <div class="panel-body">
 
                         <div style="height:350px; width:100%;">
@@ -97,34 +80,42 @@
 
         
 
-
-        <div class="">
-            <h2 style="color:black;margin-left: 107px;" class="titles">Más populares</h2>
+        <div class="panel panel-default" style="background-color:#b73333;">
+            <div class="panel-body">
+                <h2 style="color:white;font-size:35px;text-align:center;" class="titles">Más populares</h2>
+            </div>
         </div>
 
-        <div style="height:350px; width:100%;">
 
-            <section class="center slider" style="width:88%;">
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-                <div>
-                    <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
-                </div>
-            </section>
 
+        <div class="panel panel-default" style="background-color:white; box-shadow: 7px 7px 5px #888888;">
+            <div class="panel-body">
+
+                <div style="height:350px; width:100%;">
+                    <section class="center slider" style="width:88%;">
+                        <div>
+                            <a><img class="hvr-shrink" style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div>
+                            <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div>
+                            <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div>
+                            <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div>
+                            <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                        <div>
+                            <a><img style="width:200px;height:300px;" src="~/Content/starw.jpg" /></a>
+                        </div>
+                    </section>
+
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
