--- a/flix/Content/bootstrap.css
+++ b/flix/Content/bootstrap.css
@@ -5474,6 +5474,7 @@ button.list-group-item-danger.active:focus {
   padding: 10px 15px;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
+  border-radius:15px;
   border-top-right-radius: 3px;
 }
 .panel-heading > .dropdown .dropdown-toggle {
@@ -5695,12 +5696,13 @@ button.list-group-item-danger.active:focus {
   border-bottom: 1px solid #ddd;
 }
 .panel-default {
-  border-color: #ddd;
+  border-color: transparent;
 }
 .panel-default > .panel-heading {
   color: #333;
-  background-color: #f5f5f5;
-  border-color: #ddd;
+  background-color: #4893d3;
+  border-color: #4893d3;
+  border-radius:15px;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #ddd;
