--- a/flix/Views/Review/review.cshtml
+++ b/flix/Views/Review/review.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "review";
 }
 
-<body class="body-content">
+<body class="body-content" style="background-color:#2e313f;">
 
 
 
@@ -15,35 +15,86 @@
 
     <div class="body-content" style="padding-top: 20px;margin-left: 20px;margin-right: 20px;">
 
-
-
-        
-
-
-
-
-
         <div class="panel panel-default" style="background-color:#b73333;">
             <div class="panel-body">
                 <h2 style="color:white;font-size:35px;text-align:center;" class="titles">Reviews</h2>
             </div>
         </div>
 
-        <div class="panel panel-default" style="background-color:white;">
-            <div class="panel-body">
-                <div class="container" style="margin-left:100px;">
-                    <div class="row">
-                        <div style="height:400px;" class="col-md-3">
-                            <a><img style="width: 265px;height: 391px;" src="~/Content/starw.jpg" /></a>
-                        </div>
-                        <div style="height:400px;border-style:solid;border-color:black; border-width:1px;" class="col-md-7">
+
+
+        <div class="row">
+
+                <div class="col-md-9">
+
+                    <div class="panel panel-default" style="background-color:white;">
+                        <div class="panel-body">
+
+                            <div class="container" style="margin-left:100px;">
+                                <div class="row">
+
+                                    <div style="height:400px;" class="col-md-3">
+                                        <a><img style="width: 265px;height: 391px;" src="~/Content/starw.jpg" /></a>
+                                    </div>
+                                    <div style="height:400px; background-color:#b73333;border-radius:15px;" class="col-md-5">
+                                            <div class="body-content" style="margin-top:30px;">
+                                                <p class="moviedes">NOMBRE: + Variable</p>
+                                                <p class="moviedes">ANIO: + Variable</p>
+                                                <p class="moviedes">AUTOR: + Variable</p>
+                                                <p class="moviedes">ACTORES: + Variable</p>
+                                                <p class="moviedes">BLAH: + Variable</p>
+                                                <p class="moviedes">BLAH: + Variable</p>
+                                                <p class="moviedes">BLAH: + Variable</p>
+                                            </div>
+                                    </div>
+
+                                </div>
+
+                            </div>
 
                         </div>
                     </div>
 
+
+
+
+                    <div class="panel panel-default">
+                      <div class="panel-heading">Nombre de User</div>
+                       <div class="panel-body">Review</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Nombre de User</div>
+                        <div class="panel-body">Review</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Nombre de User</div>
+                        <div class="panel-body">Review</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Nombre de User</div>
+                        <div class="panel-body">Review</div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Nombre de User</div>
+                        <div class="panel-body">Review</div>
+                    </div>
+                  
+                                
+
+
+
+                
+
+
+
+
                 </div>
 
-            </div>
+                <div class="col-md-3" style="height:1000px; background-color:#b73333;border-radius:15px;">
+                    <div class="panel panel-default" style="margin-top:30px;text-align:center; font-size:17px;">
+                        <div class="panel-body">Otras peliculas</div>
+                    </div>
+                </div>
+          
         </div>
-       
 </body>
