Cambios en vistas y creacion de login

--- a/flix/Views/Perfil/perfil.cshtml
+++ b/flix/Views/Perfil/perfil.cshtml
@@ -3,9 +3,62 @@
     ViewBag.Title = "perfil";
 }
 
-<body style="background-color:#fb9260;">
-    <h2 style="color:white;">Modificar Perfil</h2>
-    <div style="background-color:lightgrey;margin-top:100px;height:400px; width:100%;">
 
-    </div>
+<body class="body-content" style="background-color:#2e313f;">
+
+
+
+
+
+
+
+
+    <div class="body-content" style="padding-top: 20px;margin-left: 20px;margin-right: 20px;">
+
+        <div class="panel panel-default" style="background-color:#b73333;">
+            <div class="panel-body">
+                <h2 style="color:white;font-size:35px;text-align:center;" class="titles">TU PERFIL</h2>
+            </div>
+        </div>
+
+
+
+     
+
+            <div class="center" style="text-align:center;background-color:white;border-radius:15px;">
+
+                <div class="panel panel-default" >
+                    <div class="panel-body">
+
+                        <div class="container" style="margin: 0 auto;;margin-left:100px;">
+                            <div class="row">
+
+                                <div style="height:400px;text-align:center;" class="col-md-3">
+                                    <h3 style="color:white;background-color:#b73333;border-radius:15px;">FOTO DE PERFIL</h3>
+                                    @*aqui si pueden ser los robots!*@
+                                    <a><img style="width: 265px;height: 391px;" src="~/Content/starw.jpg" /></a>
+                                </div>
+                                <div style="height:450px; background-color:#b73333;border-radius:15px;" class="col-md-5">
+                                    <div class="body-content" style="margin-top:30px;">
+                                        <p class="moviedes">NOMBRE: + Variable</p>
+                                        <p class="moviedes">ANIO: + Variable</p>
+                                        <p class="moviedes">AUTOR: + Variable</p>
+                                        <p class="moviedes">ACTORES: + Variable</p>
+                                        <p class="moviedes">BLAH: + Variable</p>
+                                        <p class="moviedes">BLAH: + Variable</p>
+                                        <p class="moviedes">BLAH: + Variable</p>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+
+ 
 </body>
