Vista de log in

--- a/flix/Views/Login/Login.cshtml
+++ b/flix/Views/Login/Login.cshtml
@@ -34,9 +34,9 @@
 
                         <div class="container" style="margin-left:100px;">
                             <div class="row"> 
-                                <div class="col-md-4" style="background-color:#b73333;border-radius:15px; height:268px;">
+                                <div class="col-md-4" style=";border-radius:15px; height:268px;">
                                     
-
+                                    <img style="width:100%;height:auto;border-radius:15px;" src="~/Content/image.jpg" />
                                 </div>
 
 
