--- a/flix/Content/Site.css
+++ b/flix/Content/Site.css
@@ -335,3 +335,7 @@ form {
 .sizecool{
     width: 200px; height: 300px;
 }
+
+.imagencard{
+    width: 200px; height: 300px;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
